// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Progress /> Bar should render 73 progress 1`] = `
<div
  className="pb pb-bar"
>
  <div
    className="pb-bar__bar"
    style={
      Object {
        "width": "73%",
      }
    }
  >
    73%
  </div>
</div>
`;

exports[`component <Progress /> Bar should render correctly 1`] = `
<div
  className="pb pb-bar"
>
  <div
    className="pb-bar__bar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`component <Progress /> Bar should render info state 1`] = `
<div
  className="pb pb-bar info"
>
  <div
    className="pb-bar__bar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`component <Progress /> Bar should render small 1`] = `
<div
  className="pb pb-bar sm"
>
  <div
    className="pb-bar__bar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;
